lib/tests/fixtures/compiler/evaluation/missing_file.pp
notice file('foo', 'baz', 'baz')
